@@ -2,7 +2,7 @@ package com.oth.security;
 
 import com.oth.security.filters.JwtAuthenticationFilter;
 import com.oth.security.filters.JwtAuthorizationFilter;
-import com.oth.security.service.UserDetailsServiceSpec;
+import com.oth.security.service.impl.UserDetailsServiceImpl;
 import com.oth.security.util.SecurityConstants;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,21 +20,23 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.util.Arrays;
+import java.util.List;
 
 @EnableWebSecurity
 @Configuration
 @EnableGlobalMethodSecurity(prePostEnabled = true)
 public class SecurityConfiguration extends WebSecurityConfigurerAdapter{
 	
-	private final UserDetailsServiceSpec userDetails;
+	private final UserDetailsServiceImpl userDetails;
 
-	public SecurityConfiguration(UserDetailsServiceSpec userDetails) {
+	public SecurityConfiguration(UserDetailsServiceImpl userDetails) {
 		this.userDetails = userDetails;
 	}
 
 	@Override
 	protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-		auth.userDetailsService(userDetails);
+		auth.userDetailsService(userDetails)
+				.passwordEncoder(passwordEncoder());
 	}
 	
 	@Override
@@ -42,28 +44,26 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter{
 
 		CorsConfiguration corsConfiguration = new CorsConfiguration();
 		corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "DELETE"));
-		corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
-		corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+		corsConfiguration.setAllowedHeaders(List.of("*"));
+		corsConfiguration.setAllowedOrigins(List.of("*"));
 
+		//http.anonymous()
+		//		.disable()
 		http.csrf().disable().cors().configurationSource(request -> corsConfiguration).and()
 			.authorizeRequests().antMatchers(SecurityConstants.getAuthorizedPaths()).permitAll()
 			//.antMatchers(HttpMethod.GET,"/api/v1/users/**").hasAuthority("ADMIN")
 			.anyRequest().permitAll()
 			.and().sessionManagement()
 			.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-		/*
-		http.formLogin();
-		*/
 		http.headers().frameOptions().disable();
 		http.addFilter(new JwtAuthenticationFilter(authenticationManagerBean()));
-		
-		//It's some mecanisme of midlware, il s'execute avant tous les autres filters pour interceper la requets du client et voir s'il est authentifié( valid acces-token)
+
+		//It's some mechanism of middleware, it's executed before all other filters to intercept the client's requests and saw if he authenticated (access-token is Valid)
 		http.addFilterBefore(new JwtAuthorizationFilter(), UsernamePasswordAuthenticationFilter.class);
 	}
 	
 	@Override
 	public void configure(WebSecurity web) throws Exception {
-		// TODO Auto-generated method stub
 		super.configure(web);
 	}
 	
@@ -75,7 +75,6 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter{
 	@Bean
 	@Override
 	public AuthenticationManager authenticationManagerBean() throws Exception {
-		// TODO Auto-generated method stub
 		return super.authenticationManagerBean();
 	}
 
